--- a/index.html
+++ b/index.html
@@ -31,12 +31,21 @@
 
 <hr>
 
+<p><strong>Where this web page resides on the World Wide Web...</strong></p>
+
 <p><span style="background:#ffff00">The Uniform Resource Locator of <strong>this (GitHub-hosted) website</strong> is as follows: <a style="background: #000000;color: #00ff00" href="https://karlinarayberinger.github.io/KARBYTES_BLOG_APPS_github_hosted_website/" target="_blank" rel="noopener">https://karlinarayberinger.github.io/KARBYTES_BLOG_APPS_github_hosted_website/</a></span></p>
 
 <p>(The name of the source code file of this live (GitHub-hosted) web page is <strong>index.html</strong> and is available as a raw source code file at the following Uniform Resource Locator: <a style="background: #000000;color: #00ff00" href="https://raw.githubusercontent.com/karlinarayberinger/KARBYTES_BLOG_APPS_github_hosted_website/main/index.html" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARBYTES_BLOG_APPS_github_hosted_website/main/index.html</a>).</p>
 
 <hr>
 
+<p><strong>KARBYTES_BLOG_APPS (GitHub-hosted web page applications)...</strong></p>
+
+<hr>
+
+<p><strong>ABRIDGED_KEYBOARD_MUSICAL_INSTRUMENT:</strong></p>
+
+<hr>
 
 <hr>
 
