--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
 
 <p><strong>ABRIDGED_KEYBOARD_MUSICAL_INSTRUMENT:</strong></p>
 
+<ul>
+  <li><p>live_application: <a style="background: #00ff00;color: #000000" href="https://karlinarayberinger.github.io/KARBYTES_BLOG_APPS_github_hosted_website/ABRIDGED_KEYBOARD_MUSICAL_INSTRUMENT/abridged_keyboard_musical_instrument.html" target="_blank" rel="noopener">https://karlinarayberinger.github.io/KARBYTES_BLOG_APPS_github_hosted_website/ABRIDGED_KEYBOARD_MUSICAL_INSTRUMENT/abridged_keyboard_musical_instrument.html</a></p></li>
+  <li><p>application_page_source_code: <a style="background: #000000;color: #00ff00" href="https://karlinaobject.wordpress.com/" target="_blank" rel="noopener">https://karlinaobject.wordpress.com/</a></p></li>
+  <li><p>application_documentation: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/" target="_blank" rel="noopener">https://karbytesforlifeblog.wordpress.com/</a></p></li>
+</ul>
+
 <hr>
 
 <hr>
