--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
 
 <hr>
 
+<p><strong>BEATS_MACHINE:</strong></p>
+
+<ul>
+  <li><p>live_application: <a style="background: #00ff00;color: #000000" href="https://karlinarayberinger.github.io/KARBYTES_BLOG_APPS_github_hosted_website/BEATS_MACHINE/beats_machine.html" target="_blank" rel="noopener">https://karlinarayberinger.github.io/KARBYTES_BLOG_APPS_github_hosted_website/BEATS_MACHINE/beats_machine.html</a></p></li>
+  <li><p>application_page_source_code: <a style="background: #000000;color: #00ff00" href="https://raw.githubusercontent.com/karlinarayberinger/KARBYTES_BLOG_APPS_github_hosted_website/main/BEATS_MACHINE/beats_machine.html" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARBYTES_BLOG_APPS_github_hosted_website/main/BEATS_MACHINE/beats_machine.html</a></p></li>
+  <li><p>application_documentation: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/beats_machine/" target="_blank" rel="noopener">https://karbytesforlifeblog.wordpress.com/beats_machine/</a></p></li>
+</ul>
+
 <hr>
 
 <p><strong>TEST_1: Live Web Application (powered by (client-side) JavaScript)</strong></p>
