--- a/index.html
+++ b/index.html
@@ -63,6 +63,16 @@
 
 <hr>
 
+<p><strong>RANDOM_GRAPH_GENERATOR:</strong></p>
+
+<ul>
+  <li><p>live_application: <a style="background: #00ff00;color: #000000" href="https://karlinarayberinger.github.io/KARBYTES_BLOG_APPS_github_hosted_website/RANDOM_GRAPH_GENERATOR/random_graph_generator.html" target="_blank" rel="noopener">https://karlinarayberinger.github.io/KARBYTES_BLOG_APPS_github_hosted_website/RANDOM_GRAPH_GENERATOR/random_graph_generator.html</a></p></li>
+  <li><p>application_page_source_code: <a style="background: #000000;color: #00ff00" href="https://raw.githubusercontent.com/karlinarayberinger/KARBYTES_BLOG_APPS_github_hosted_website/main/RANDOM_GRAPH_GENERATOR/random_graph_generator.html" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/RANDOM_GRAPH_GENERATOR/random_graph_generator.html</a></p></li>
+  <li><p>application_documentation: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/random_graph_generator/" target="_blank" rel="noopener">https://karbytesforlifeblog.wordpress.com/random_graph_generator/</a></p></li>
+</ul>
+
+<hr>
+
 <p><strong>TEST_1: Live Web Application (powered by (client-side) JavaScript)</strong></p>
 
 <hr>
