--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <hr>
 
-<p><em><strong><span style="background:#00ffff">The purpose of this website is to host an interactive version of every (latest production-level) web application (based in HTML, CSS, and JavaScript (or perhaps some other web-interfacing programming language)) which has an accompanying software development tutorial on the <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/software_engineering_portfolio/" target="_blank" rel="noopener">SOFTWARE_ENGINEERING_PORTFOLIO</a> section of karbytes' largest website (and that website is named <a style="background: #000000;color: #ff9000" href="https://karbytesforlifeblog.wordpress.com/" target="_blank" rel="noopener">KARBYTES_FOR_LIFE_BLOG dot WordPress dot Com</a> ). This website is a light web "mirror" of the dark website cluster created by karbytes and which also features every aforementioned live (i.e. available on the World Wide Web as a public web page which technically any person can interact with (as karbytes intended in the format of a complete and functional single web page application)).</span></strong></em></p>
+<p><em><strong><span style="background:#00ffff">The purpose of this website is to host an interactive version of every web application (based in HTML, CSS, and JavaScript (or perhaps some other web-interfacing programming language)) which has an accompanying software development tutorial on the <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/software_engineering_portfolio/" target="_blank" rel="noopener">SOFTWARE_ENGINEERING_PORTFOLIO</a> section of karbytes' largest website (and that website is named <a style="background: #000000;color: #ff9000" href="https://karbytesforlifeblog.wordpress.com/" target="_blank" rel="noopener">KARBYTES_FOR_LIFE_BLOG dot WordPress dot Com</a> ). This website is a light web "mirror" of the dark website cluster created by karbytes and which also features every aforementioned live (i.e. available on the World Wide Web as a public web page which technically any person can interact with (as karbytes intended in the format of a complete and functional single web page application)).</span></strong></em></p>
 
 <p><strong><em>Note that, unlike the aforementioned dark website, this (light) website does not feature SOUND_TRACK_LOOP_COUNTER_THREE (which is essentially the same application as SOUND_TRACK_LOOP_COUNTER_TWO but which features a different and larger collection of sound files).</em></strong></p>
 
@@ -90,6 +90,10 @@
   <li><p>application_page_source_code: <a style="background: #000000;color: #00ff00" href="https://raw.githubusercontent.com/karlinarayberinger/KARBYTES_BLOG_APPS_github_hosted_website/main/SOUND_TRACK_LOOP_COUNTER_TWO/sound_track_looper_two.html" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/SOUND_TRACK_LOOP_COUNTER_TWO/sound_track_looper_two.html</a></p></li>
   <li><p>application_documentation: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/sound_track_loop_counter_two/" target="_blank" rel="noopener">https://karbytesforlifeblog.wordpress.com/sound_track_loop_counter_two/</a></p></li>
 </ul>
+
+<hr>
+
+<p><strong>KARBYTES_OBJECT_APPS (GitHub-hosted web page applications)...</strong></p>
 
 <hr>
 
