--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 <hr>
 
-<p><strong>KARBYTES_OBJECT_APPS (GitHub-hosted web page applications)...</strong></p>
+<p><strong>KARLINA_OBJECT_APPS (GitHub-hosted web page applications)...</strong></p>
 
 <hr>
 
