--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
 
 <hr>
 
-<p><strong>SOUND_TRACK_LOOP_COUNTER_TWO:</strong></p>
+<p><strong>TRIANGLE_GRAPHING_TWO:</strong></p>
 
 <ul>
-  <li><p>live_application: <a style="background: #00ff00;color: #000000" href="https://karlinarayberinger.github.io/KARBYTES_BLOG_APPS_github_hosted_website/SOUND_TRACK_LOOP_COUNTER_TWO/sound_track_looper_two.html" target="_blank" rel="noopener">https://karlinarayberinger.github.io/KARBYTES_BLOG_APPS_github_hosted_website/SOUND_TRACK_LOOP_COUNTER_TWO/sound_track_looper_two.html</a></p></li>
-  <li><p>application_page_source_code: <a style="background: #000000;color: #00ff00" href="https://raw.githubusercontent.com/karlinarayberinger/KARBYTES_BLOG_APPS_github_hosted_website/main/SOUND_TRACK_LOOP_COUNTER_TWO/sound_track_looper_two.html" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/SOUND_TRACK_LOOP_COUNTER_TWO/sound_track_looper_two.html</a></p></li>
-  <li><p>application_documentation: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/sound_track_loop_counter_two/" target="_blank" rel="noopener">https://karbytesforlifeblog.wordpress.com/sound_track_loop_counter_two/</a></p></li>
+  <li><p>live_application: <a style="background: #00ff00;color: #000000" href="https://karlinarayberinger.github.io/KARBYTES_BLOG_APPS_github_hosted_website/TRIANGLE_GRAPHING_TWO/triangle_graphing_two.html" target="_blank" rel="noopener">https://karlinarayberinger.github.io/KARBYTES_BLOG_APPS_github_hosted_website/TRIANGLE_GRAPHING_TWO/triangle_graphing_two.html</a></p></li>
+  <li><p>application_page_source_code: <a style="background: #000000;color: #00ff00" href="https://raw.githubusercontent.com/karlinarayberinger/KARBYTES_BLOG_APPS_github_hosted_website/main/TRIANGLE_GRAPHING_TWO/triangle_graphing_two.html" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/TRIANGLE_GRAPHING_TWO/triangle_graphing_two.html</a></p></li>
+  <li><p>application_documentation: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/triangle_graphing_two/" target="_blank" rel="noopener">https://karbytesforlifeblog.wordpress.com/triangle_graphing_two/</a></p></li>
 </ul>
 
 <hr>
