--- a/index.html
+++ b/index.html
@@ -97,16 +97,13 @@
 
 <hr>
 
+<p><strong>BASE_CONVERTER:</strong></p>
 
-<p><strong>TEST_1: Live Web Application (powered by (client-side) JavaScript)</strong></p>
-
-<hr>
-
-<p>The HTML file of the RANDOM_GRAPH_GENERATOR web application which is hosted as a live (i.e. interactive) web application within this website is (a) located within the same GitHub repository as is the aforementioned index.html file and (b) is available as a raw source code file at the following Uniform Resource Locator: <a style="background: #000000;color: #00ff00" href="https://raw.githubusercontent.com/karlinarayberinger/karbytes_test_github_hosted_website/main/random_graph_generator.html" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/karbytes_test_github_hosted_website/main/random_graph_generator.html</a></p>
-
-<p><span style="background:#00ff00">Linked Interactive (Single) Web Page Application</span></p>
-
-<p><a style="background: #000000;color: #00ff00" href="https://karlinarayberinger.github.io/karbytes_test_github_hosted_website/random_graph_generator.html" target="_blank" rel="noopener">https://karlinarayberinger.github.io/karbytes_test_github_hosted_website/random_graph_generator.html</a></p>
+<ul>
+  <li><p>live_application: <a style="background: #00ff00;color: #000000" href="https://karlinarayberinger.github.io/KARBYTES_BLOG_APPS_github_hosted_website/BASE_CONVERTER/base_converter.html" target="_blank" rel="noopener">https://karlinarayberinger.github.io/KARBYTES_BLOG_APPS_github_hosted_website/BASE_CONVERTER/base_converter.html</a></p></li>
+  <li><p>application_page_source_code: <a style="background: #000000;color: #00ff00" href="https://raw.githubusercontent.com/karlinarayberinger/KARBYTES_BLOG_APPS_github_hosted_website/main/BASE_CONVERTER/base_converter.html" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/BASE_CONVERTER/base_converter.html</a></p></li>
+  <li><p>application_documentation: <a style="background: #000000;color: #00ff00" href="https://karlinaobject.wordpress.com/base_converter/" target="_blank" rel="noopener">https://karlinaobject.wordpress.com/base_converter/</a></p></li>
+</ul>
 
 <hr>
 
