--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <hr>
 
-<p><strong>KARBYTES_BLOG_APPS (GitHub-hosted web page applications)...</strong></p>
+<p><strong><span style="background:#00ffff">KARBYTES_BLOG_APPS (GitHub-hosted web page applications)...</span></strong></p>
 
 <hr>
 
@@ -93,7 +93,7 @@
 
 <hr>
 
-<p><strong>KARLINA_OBJECT_APPS (GitHub-hosted web page applications)...</strong></p>
+<p><strong><span style="background:#00ffff">KARLINA_OBJECT_APPS (GitHub-hosted web page applications)...</span></strong></p>
 
 <hr>
 
