--- a/index.html
+++ b/index.html
@@ -156,6 +156,17 @@
 </ul>
 
 <hr>
+
+<p><strong>SOUND_TRACK_LOOP_COUNTER:</strong></p>
+
+<ul>
+  <li><p>live_application: <a style="background: #00ff00;color: #000000" href="https://karlinarayberinger.github.io/KARBYTES_BLOG_APPS_github_hosted_website/SOUND_TRACK_LOOP_COUNTER/sound_track_looper.html" target="_blank" rel="noopener">https://karlinarayberinger.github.io/KARBYTES_BLOG_APPS_github_hosted_website/SOUND_TRACK_LOOP_COUNTER/sound_track_looper.html</a></p></li>
+  <li><p>application_page_source_code: <a style="background: #000000;color: #00ff00" href="https://raw.githubusercontent.com/karlinarayberinger/KARBYTES_BLOG_APPS_github_hosted_website/main/SOUND_TRACK_LOOP_COUNTER/sound_track_looper.html" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/SOUND_TRACK_LOOP_COUNTER/sound_track_looper.html</a></p></li>
+  <li><p>application_documentation: <a style="background: #000000;color: #00ff00" href="https://karlinaobject.wordpress.com/sound_track_loop_counter/" target="_blank" rel="noopener">https://karlinaobject.wordpress.com/sound_track_loop_counter/</a></p></li>
+</ul>
+
+<hr>
+
 <strong>KARBYTES continued...</strong>
 
 <p>Every <em>single web page application</em> which is featured in <strong>KARLINA_OBJECT dot WordPress dot Com</strong> and in <strong>KARBYTES_FOR_LIFE_BLOG dot WordPress dot Com</strong> is available as an interactive web application (hosted from karbytes' own dark web server) at the following <strong>.onion</strong> web page address: <a style="background: #000000;color: #00ffff" href="http://qkbrwfubnh4knc6kkhx6uepccavpwezdf2al7w2quepe3qociegsi3yd.onion/" target="_blank" rel="noopener">http://qkbrwfubnh4knc6kkhx6uepccavpwezdf2al7w2quepe3qociegsi3yd.onion/</a></p>
