--- a/index.html
+++ b/index.html
@@ -167,6 +167,16 @@
 
 <hr>
 
+<p><strong>TRIANGLE_GRAPHING:</strong></p>
+
+<ul>
+  <li><p>live_application: <a style="background: #00ff00;color: #000000" href="https://karlinarayberinger.github.io/KARBYTES_BLOG_APPS_github_hosted_website/TRIANGLE_GRAPHING/triangle_graphing.html" target="_blank" rel="noopener">https://karlinarayberinger.github.io/KARBYTES_BLOG_APPS_github_hosted_website/TRIANGLE_GRAPHING/triangle_graphing.html</a></p></li>
+  <li><p>application_page_source_code: <a style="background: #000000;color: #00ff00" href="https://raw.githubusercontent.com/karlinarayberinger/KARBYTES_BLOG_APPS_github_hosted_website/main/TRIANGLE_GRAPHING/triangle_graphing.html" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/TRIANGLE_GRAPHING/triangle_graphing.html</a></p></li>
+  <li><p>application_documentation: <a style="background: #000000;color: #00ff00" href="https://karlinaobject.wordpress.com/triangle_graphing/" target="_blank" rel="noopener">https://karlinaobject.wordpress.com/triangle_graphing/</a></p></li>
+</ul>
+
+<hr>
+
 <p><strong>WORD_COUNTER:</strong></p>
 
 <ul>
