--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  * file: index.html
  * type: Hyper-Text-Markup-Language
  * author: karbytes
- * date: 04_APRIL_2025
+ * date: 02_JUNE_2025
  * license: PUBLIC_DOMAIN
  */
  -->
@@ -197,9 +197,7 @@
 </ul>
 <hr>
 
-<hr>
-
-<p>This web page was last updated on 04_APRIL_2025. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
+<p>This web page was last updated on 02_JUNE_2025. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
 
 <hr>
 </body>
