--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  * file: index.html
  * type: Hyper-Text-Markup-Language
  * author: karbytes
- * date: 02_JUNE_2025
+ * date: 12_JULY_2025
  * license: PUBLIC_DOMAIN
  */
  -->
@@ -59,6 +59,16 @@
   <li><p>live_application: <a style="background: #00ff00;color: #000000" href="https://karlinarayberinger.github.io/KARBYTES_BLOG_APPS_github_hosted_website/BEATS_MACHINE/beats_machine.html" target="_blank" rel="noopener">https://karlinarayberinger.github.io/KARBYTES_BLOG_APPS_github_hosted_website/BEATS_MACHINE/beats_machine.html</a></p></li>
   <li><p>application_page_source_code: <a style="background: #000000;color: #00ff00" href="https://raw.githubusercontent.com/karlinarayberinger/KARBYTES_BLOG_APPS_github_hosted_website/main/BEATS_MACHINE/beats_machine.html" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARBYTES_BLOG_APPS_github_hosted_website/main/BEATS_MACHINE/beats_machine.html</a></p></li>
   <li><p>application_documentation: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/beats_machine/" target="_blank" rel="noopener">https://karbytesforlifeblog.wordpress.com/beats_machine/</a></p></li>
+</ul>
+
+<hr>
+
+<p><strong>JULIA_SET_FRACTAL_ANIMATION:</strong></p>
+
+<ul>
+  <li><p>live_application: <a style="background: #00ff00;color: #000000" href="https://karlinarayberinger.github.io/KARBYTES_BLOG_APPS_github_hosted_website/JULIA_SET_FRACTAL_ANIMATION/julia_set_fractal_animation.html" target="_blank" rel="noopener">https://karlinarayberinger.github.io/KARBYTES_BLOG_APPS_github_hosted_website/JULIA_SET_FRACTAL_ANIMATION/julia_set_fractal_animation.html</a></p></li>
+  <li><p>application_page_source_code: <a style="background: #000000;color: #00ff00" href="https://raw.githubusercontent.com/karlinarayberinger/KARBYTES_BLOG_APPS_github_hosted_website/main/JULIA_SET_FRACTAL_ANIMATION/julia_set_fractal_animation.html" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARBYTES_BLOG_APPS_github_hosted_website/main/JULIA_SET_FRACTAL_ANIMATION/julia_set_fractal_animation.html</a></p></li>
+  <li><p>application_documentation: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/julia_set_fractal_animation/" target="_blank" rel="noopener">https://karbytesforlifeblog.wordpress.com/julia_set_fractal_animation/</a></p></li>
 </ul>
 
 <hr>
@@ -197,7 +207,7 @@
 </ul>
 <hr>
 
-<p>This web page was last updated on 02_JUNE_2025. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
+<p>This web page was last updated on 12_JULY_2025. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
 
 <hr>
 </body>
