--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  * file: index.html
  * type: Hyper-Text-Markup-Language
  * author: karbytes
- * date: 07_AUGUST_2025
+ * date: 17_AUGUST_2025
  * license: PUBLIC_DOMAIN
  */
  -->
@@ -68,7 +68,17 @@
 <ul>
   <li><p>live_application: <a style="background: #00ff00;color: #000000" href="https://karlinarayberinger.github.io/KARBYTES_BLOG_APPS_github_hosted_website/FALLING_APPLES_GAME/falling_apples_game_interface.html" target="_blank" rel="noopener">https://karlinarayberinger.github.io/KARBYTES_BLOG_APPS_github_hosted_website/FALLING_APPLES_GAME/falling_apples_game_interface.html</a></p></li>
   <li><p>application_page_source_code: <a style="background: #000000;color: #00ff00" href="https://raw.githubusercontent.com/karlinarayberinger/KARBYTES_BLOG_APPS_github_hosted_website/main/FALLING_APPLES_GAME/falling_apples_game_interface.html" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARBYTES_BLOG_APPS_github_hosted_website/main/FALLING_APPLES_GAME/falling_apples_game_interface.html</a></p></li>
-  <li><p>application_documentation: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/beats_machine/" target="_blank" rel="noopener">https://karbytesforlifeblog.wordpress.com/falling_apples_game/</a></p></li>
+  <li><p>application_documentation: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/falling_apples_game/" target="_blank" rel="noopener">https://karbytesforlifeblog.wordpress.com/falling_apples_game/</a></p></li>
+</ul>
+
+<hr>
+
+<p><strong>FALLING_APPLES_GAME_TWO:</strong></p>
+
+<ul>
+  <li><p>live_application: <a style="background: #00ff00;color: #000000" href="https://karlinarayberinger.github.io/KARBYTES_BLOG_APPS_github_hosted_website/FALLING_APPLES_GAME_TWO/falling_apples_game_two_interface.html" target="_blank" rel="noopener">https://karlinarayberinger.github.io/KARBYTES_BLOG_APPS_github_hosted_website/FALLING_APPLES_GAME_TWO/falling_apples_game_two_interface.html</a></p></li>
+  <li><p>application_page_source_code: <a style="background: #000000;color: #00ff00" href="https://raw.githubusercontent.com/karlinarayberinger/KARBYTES_BLOG_APPS_github_hosted_website/main/FALLING_APPLES_GAME_TWO/falling_apples_game_two_interface.html" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARBYTES_BLOG_APPS_github_hosted_website/main/FALLING_APPLES_GAME_TWO/falling_apples_game_two_interface.html</a></p></li>
+  <li><p>application_documentation: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/falling_apples_game_two/" target="_blank" rel="noopener">https://karbytesforlifeblog.wordpress.com/falling_apples_game_two/</a></p></li>
 </ul>
 
 <hr>
@@ -227,7 +237,7 @@
 </ul>
 <hr>
 
-<p>This web page was last updated on 07_AUGUST_2025. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
+<p>This web page was last updated on 17_AUGUST_2025. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
 
 <hr>
 </body>
